@@ -11,6 +11,17 @@ public class DockerCodeExecutionUtil {
     private static final int EXECUTION_TIMEOUT_SECONDS = 10;
     private static final int MEMORY_LIMIT_MB = 256;
 
+    private static final String JAVA_RUNNER_IMAGE = "java-runner:latest";
+    private static final String PYTHON_RUNNER_IMAGE = "python-runner:latest";
+    private static final String CPP_RUNNER_IMAGE = "cpp-runner:latest";
+    private static final String CSHARP_RUNNER_IMAGE = "csharp-runner:latest";
+    private static final String GO_RUNNER_IMAGE = "go-runner:latest";
+
+    public static final String LANG_JAVA = "java";
+    public static final String LANG_PYTHON = "python";
+    public static final String LANG_CPP = "cpp";
+    public static final String LANG_CSHARP = "csharp";
+    public static final String LANG_GO = "go";
     /**
      * Biên dịch code (nếu cần) trong Docker container
      */
@@ -19,47 +30,47 @@ public class DockerCodeExecutionUtil {
         String dockerImage = getDockerImage(language);
 
         switch (language.toLowerCase()) {
-            case "java":
+            case LANG_JAVA:
                 dockerCommand = Arrays.asList("docker", "run", "--rm",
                         "--network", "none",
                         "--memory=" + MEMORY_LIMIT_MB + "m",
                         "--cpus=0.5",
-                        "-v", workingDir.toAbsolutePath() + ":/app:Z",
+                        "-v", workingDir.toAbsolutePath() + ":/app",
                         "-w", "/app",
                         dockerImage,
                         "javac", "Main.java");
                 break;
-            case "cpp":
+            case LANG_CPP:
                 dockerCommand = Arrays.asList("docker", "run", "--rm",
                         "--network", "none",
                         "--memory=" + MEMORY_LIMIT_MB + "m",
                         "--cpus=0.5",
-                        "-v", workingDir.toAbsolutePath() + ":/app:Z",
+                        "-v", workingDir.toAbsolutePath() + ":/app",
                         "-w", "/app",
                         dockerImage,
                         "g++", "main.cpp", "-o", "main");
                 break;
-            case "csharp":
+            case LANG_CSHARP:
                 dockerCommand = Arrays.asList("docker", "run", "--rm",
                         "--network", "none",
                         "--memory=" + MEMORY_LIMIT_MB + "m",
                         "--cpus=0.5",
-                        "-v", workingDir.toAbsolutePath() + ":/app:Z",
+                        "-v", workingDir.toAbsolutePath() + ":/app",
                         "-w", "/app",
                         dockerImage,
                         "mcs", "-out:Main.exe", "Main.cs");
                 break;
-            case "go":
+            case LANG_GO:
                 dockerCommand = Arrays.asList("docker", "run", "--rm",
                         "--network", "none",
                         "--memory=" + MEMORY_LIMIT_MB + "m",
                         "--cpus=0.5",
-                        "-v", workingDir.toAbsolutePath() + ":/app:Z",
+                        "-v", workingDir.toAbsolutePath() + ":/app",
                         "-w", "/app",
                         dockerImage,
                         "go", "build", "-o", "main", "main.go");
                 break;
-            case "python":
+            case LANG_PYTHON:
                 // Python không cần compile
                 return;
             default:
@@ -76,31 +87,20 @@ public class DockerCodeExecutionUtil {
         String containerId = "code-exec-" + UUID.randomUUID().toString().substring(0, 8);
         String dockerImage = getDockerImage(language);
 
-        List<String> command;
-        switch (language.toLowerCase()) {
-            case "java":
-                command = Arrays.asList("java", "Main");
-                break;
-            case "cpp":
-            case "go":
-                command = Arrays.asList("./main");
-                break;
-            case "csharp":
-                command = Arrays.asList("mono", "Main.exe");
-                break;
-            case "python":
-                command = Arrays.asList("python3", "main.py");
-                break;
-            default:
-                throw new RuntimeException("Ngôn ngữ chưa được hỗ trợ: " + language);
-        }
+        List<String> command = switch (language.toLowerCase()) {
+            case LANG_JAVA -> Arrays.asList("java", "Main");
+            case LANG_GO, LANG_CPP -> List.of("./main");
+            case LANG_CSHARP-> Arrays.asList("mono", "Main.exe");
+            case LANG_PYTHON -> Arrays.asList("python3", "main.py");
+            default -> throw new RuntimeException("Ngôn ngữ chưa được hỗ trợ: " + language);
+        };
 
         List<String> dockerCommand = new ArrayList<>(Arrays.asList(
                 "docker", "run", "--rm", "--name", containerId,
                 "--network", "none",
                 "--memory=" + MEMORY_LIMIT_MB + "m",
                 "--cpus=0.5",
-                "-v", workingDir.toAbsolutePath() + ":/app:Z",
+                "-v", workingDir.toAbsolutePath() + ":/app",
                 "-w", "/app",
                 "-i",
                 dockerImage
@@ -123,7 +123,7 @@ public class DockerCodeExecutionUtil {
                 new ProcessBuilder("docker", "kill", containerId).start().waitFor();
             } catch (Exception ignored) {}
             process.destroyForcibly();
-            return "⏰ Chạy quá thời gian (" + EXECUTION_TIMEOUT_SECONDS + " giây)";
+            return " Chạy quá thời gian (" + EXECUTION_TIMEOUT_SECONDS + " giây)";
         }
 
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
@@ -135,20 +135,14 @@ public class DockerCodeExecutionUtil {
      * Xác định Docker image cho từng ngôn ngữ
      */
     private static String getDockerImage(String language) {
-        switch (language.toLowerCase()) {
-            case "java":
-                return "java-runner:latest";
-            case "python":
-                return "python-runner:latest";
-            case "cpp":
-                return "cpp-runner:latest";
-            case "csharp":
-                return "csharp-runner:latest";
-            case "go":
-                return "go-runner:latest";
-            default:
-                throw new RuntimeException("Chưa có image cho ngôn ngữ: " + language);
-        }
+        return switch (language.toLowerCase()) {
+            case LANG_JAVA-> JAVA_RUNNER_IMAGE;
+            case LANG_PYTHON , "py" -> PYTHON_RUNNER_IMAGE;
+            case LANG_CPP , "c++" -> CPP_RUNNER_IMAGE;
+            case LANG_CSHARP , "cs" -> CSHARP_RUNNER_IMAGE;
+            case LANG_GO -> GO_RUNNER_IMAGE;
+            default -> throw new RuntimeException("Chưa có image cho ngôn ngữ: " + language);
+        };
     }
 
     /**
